--- a/portfolio/src/components/techstack/techstack.css
+++ b/portfolio/src/components/techstack/techstack.css
@@ -1,6 +1,8 @@
 .tech-stack{
     display: flex;
     gap: 1rem;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .tech-item{
